syntax = "proto3";
import "proto_login.proto";

package com.mikai233.protocol;

message MessageServerToClient{
  LoginResp login_resp = 10001;
}